# MOT-analysis

./: MOT_analysis.ipynb  pyproject.toml
notebooks/: LLM_based summarys_reviews.ipynb  inital_data_mining_mot.ipynb  inital_data_mining_reviews.ipynb  issue_segmentation_in_reviews.ipynb  network_geneation_mot.ipynb  network_generation.ipynb  network_generation_mot.ipynb  review_sentiment.ipynb  topic_modelling_reviews.ipynb  word_clouds_mot.ipynb  word_clouds_reviews.ipynb
