[tool.poetry]
name = "mot-analysis"
version = "0.1.0"
description = ""
authors = ["reaf <finn.rea@roche.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
pandas = "^2.2.3"
requests = "^2.32.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
spacy = "^3.8.5"
gensim = "^4.3.3"
numpy = "1.26.4"
pyldavis = "^3.4.1"
wordcloud = "^1.9.4"
nltk = "^3.9.1"
sentence-transformers = "^4.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
